--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,22 @@ dj-database-url==0.4.2
 Django==1.10.5
 django-storages==1.5.2
 djangorestframework==3.5.4
+djangorestframework-jwt==1.10.0
 docutils==0.13.1
+et-xmlfile==1.0.1
 gunicorn==19.6.0
+jdcal==1.3
 jmespath==0.9.1
 packaging==16.8
 pyasn1==0.2.2
+PyJWT==1.4.2
 pyparsing==2.1.10
 python-dateutil==2.6.0
 pytz==2016.10
 PyYAML==3.12
+readline==6.2.4.1
 rsa==3.4.2
 s3transfer==0.1.10
 six==1.10.0
 whitenoise==3.3.0
+psycopg2-2.6.2
