--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+appdirs==1.4.1
 awscli==1.11.55
 boto3==1.4.4
 botocore==1.5.18
 colorama==0.3.7
 dj-database-url==0.4.2
 Django==1.10.5
+django-ratelimit==1.0.1
 django-storages==1.5.2
 djangorestframework==3.5.4
 djangorestframework-jwt==1.10.0
