--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ gunicorn==19.6.0
 jdcal==1.3
 jmespath==0.9.1
 packaging==16.8
+psycopg2==2.7.1
 pyasn1==0.2.2
 PyJWT==1.4.2
 pyparsing==2.1.10
@@ -26,4 +27,3 @@ rsa==3.4.2
 s3transfer==0.1.10
 six==1.10.0
 whitenoise==3.3.0
-psycopg2-2.6.2
